Ex11/Resources/client_ingress_issuer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  annotations:
    cert-manager.io/issuer: ca-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - client.local.dev
      secretName: client-dev-tls
  rules:
    - host: client.local.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
